<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test.FourthActivity" >

    <TextView
        android:id="@+id/q12prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionB3" />

    <RadioGroup
        android:id="@+id/q12group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/q12prompt"
        android:layout_below="@+id/q12prompt"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/q12choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v1" />

        <RadioButton
            android:id="@+id/q12choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v2" />

        <RadioButton
            android:id="@+id/q12choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v3" />

        <RadioButton
            android:id="@+id/q12choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v4" />

        <RadioButton
            android:id="@+id/q12choice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/v5" />
    </RadioGroup>

    <TextView
        android:id="@+id/q13prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/questionB4" />

    <RadioGroup
        android:id="@+id/q13group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/q13prompt"
        android:layout_below="@+id/q13prompt"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/q13choice0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NA" />
        
        <RadioButton
            android:id="@+id/q13choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v1" />

        <RadioButton
            android:id="@+id/q13choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v2" />

        <RadioButton
            android:id="@+id/q13choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v3" />

        <RadioButton
            android:id="@+id/q13choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v4" />

        <RadioButton
            android:id="@+id/q13choice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/v5" />
    </RadioGroup>

    <TextView
        android:id="@+id/q14prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:text="@string/questionB5" />

    <RadioGroup
        android:id="@+id/q14group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/q14prompt"
        android:layout_below="@+id/q14prompt"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/q14choice0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NA" />

        <RadioButton
            android:id="@+id/q14choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v1" />

        <RadioButton
            android:id="@+id/q14choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v2" />

        <RadioButton
            android:id="@+id/q14choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v3" />

        <RadioButton
            android:id="@+id/q14choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v4" />

        <RadioButton
            android:id="@+id/q14choice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/v5" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="clickEvent"
        android:text="@string/submit" />

</RelativeLayout>